[build] 添加老版本的启动支持