@@ -3,23 +3,52 @@ package top.fifthlight.fabazel.devlaunchwrapper;
 import com.google.devtools.build.runfiles.AutoBazelRepository;
 import com.google.devtools.build.runfiles.Runfiles;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.IOException;
+import java.lang.reflect.Method;
 import java.nio.file.*;
 import java.nio.file.attribute.BasicFileAttributes;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
+import java.util.jar.JarEntry;
+import java.util.jar.JarInputStream;
+import java.util.stream.Collectors;
 
 // Bazel don't allow us to transfer arguments in BUILD file, so let's hack
+@SuppressWarnings({"RedundantExplicitVariableType", "SimplifyStreamApiCallChains"})
 @AutoBazelRepository
 public class DevLaunchWrapper {
     private static final String version = System.getProperty("dev.launch.version", null);
-    private static final String type = System.getProperty("dev.launch.type", null);
+    private static final String type = System.getProperty("dev.launch.type", "client");
     private static final String assetsPath = System.getProperty("dev.launch.assetsPath", null);
     private static final String accessToken = System.getProperty("dev.launch.accessToken", "");
     private static final String mainClass = System.getProperty("dev.launch.mainClass", null);
     private static final String glfwLibName = System.getenv("GLFW_LIBNAME");
     private static final String copyFiles = System.getProperty("dev.launch.copyFiles", null);
     private static final String expandRunfileProperties = System.getProperty("dev.launch.expandRunfileProperties", null);
+    private static final String nativeManifestPath = System.getProperty("dev.launch.nativeManifest", null);
+    private static final String legacyAssets = System.getProperty("dev.launch.legacyAssets", "");
+    private static final String legacyHome = System.getProperty("dev.launch.legacyHome", "");
+
+    private static void writeString(Path path, String content) throws IOException {
+        try (BufferedWriter writer = Files.newBufferedWriter(path)) {
+            writer.write(content);
+        }
+    }
+
+    private static String readString(Path path) throws IOException {
+        StringBuilder content = new StringBuilder();
+        try (BufferedReader reader = Files.newBufferedReader(path)) {
+            char[] buf = new char[4096];
+            int len;
+            while ((len = reader.read(buf)) != -1) {
+                content.append(buf, 0, len);
+            }
+        }
+        return content.toString();
+    }
 
     private static class CopyDirectoryVisitor extends SimpleFileVisitor<Path> {
         private final Path fromPath;
@@ -34,7 +63,7 @@ public class DevLaunchWrapper {
 
         @Override
         public FileVisitResult preVisitDirectory(Path dir, BasicFileAttributes attrs) throws IOException {
-            var targetPath = toPath.resolve(fromPath.relativize(dir));
+            Path targetPath = toPath.resolve(fromPath.relativize(dir));
             Files.createDirectories(targetPath);
             return FileVisitResult.CONTINUE;
         }
@@ -47,26 +76,66 @@ public class DevLaunchWrapper {
     }
 
     public static void main(String[] args) throws ReflectiveOperationException, IOException {
-        var runfiles = Runfiles.preload().withSourceRepository(AutoBazelRepository_DevLaunchWrapper.NAME);
+        Runfiles runfiles = Runfiles.preload().withSourceRepository(AutoBazelRepository_DevLaunchWrapper.NAME);
 
         if (expandRunfileProperties != null) {
-            for (var property : expandRunfileProperties.split(",")) {
-                var original = System.getProperty(property);
+            for (String property : expandRunfileProperties.split(",")) {
+                String original = System.getProperty(property);
                 System.setProperty(property, runfiles.rlocation(original));
             }
         }
 
+        if (nativeManifestPath != null) {
+            Path nativesDir = Paths.get("natives");
+            Files.createDirectories(nativesDir);
+            try (BufferedReader reader = Files.newBufferedReader(Paths.get(runfiles.rlocation(nativeManifestPath)))) {
+                String line;
+                while ((line = reader.readLine()) != null) {
+                    if (line.isEmpty()) {
+                        continue;
+                    }
+                    String[] entries = line.split(":");
+                    if (entries.length < 2) {
+                        throw new IllegalArgumentException("Invalid native manifest entry: " + line);
+                    }
+                    Path path;
+                    if (entries[0].startsWith("external/")) {
+                        path = Paths.get(runfiles.rlocation(entries[0].substring(9)));
+                    } else {
+                        path = Paths.get(runfiles.rlocation(entries[0]));
+                    }
+                    List<String> excludes = Arrays.stream(entries).skip(1).collect(Collectors.toList());
+                    try (JarInputStream jis = new JarInputStream(Files.newInputStream(path))) {
+                        JarEntry entry;
+                        outer:
+                        while ((entry = jis.getNextJarEntry()) != null) {
+                            for (String exclude : excludes) {
+                                if (entry.getName().startsWith(exclude)) {
+                                    continue outer;
+                                }
+                            }
+                            Path targetPath = nativesDir.resolve(entry.getName());
+                            Files.createDirectories(targetPath.getParent());
+                            Files.copy(jis, targetPath, StandardCopyOption.REPLACE_EXISTING);
+                        }
+                    }
+                }
+            }
+            System.setProperty("org.lwjgl.librarypath", nativesDir.toAbsolutePath().toString());
+        }
+
+        Path workDir = Paths.get(".");
+        Path workDirAbsolute = workDir.toAbsolutePath();
         if (copyFiles != null) {
-            var copyFileList = copyFiles.split(",");
-            var workDir = Path.of(".").toRealPath();
-            for (var entry : copyFileList) {
-                var colonIndex = entry.indexOf(':');
+            String[] copyFileList = copyFiles.split(",");
+            for (String entry : copyFileList) {
+                int colonIndex = entry.indexOf(':');
                 if (colonIndex == -1) {
                     throw new IllegalArgumentException("Invalid copy file entry: " + entry);
                 }
-                var fromStr = entry.substring(0, colonIndex);
-                var from = Path.of(runfiles.rlocation(fromStr)).toRealPath();
-                var to = workDir.resolve(entry.substring(colonIndex + 1));
+                String fromStr = entry.substring(0, colonIndex);
+                Path from = Paths.get(runfiles.rlocation(fromStr)).toRealPath();
+                Path to = workDir.resolve(entry.substring(colonIndex + 1));
                 Files.createDirectories(to.getParent());
                 if (Files.isDirectory(from)) {
                     Files.walkFileTree(from, new CopyDirectoryVisitor(from, to, StandardCopyOption.REPLACE_EXISTING));
@@ -76,11 +145,21 @@ public class DevLaunchWrapper {
             }
         }
 
-        var argsList = new ArrayList<>(Arrays.asList(args));
+        ArrayList<String> argsList = new ArrayList<>(Arrays.asList(args));
 
         if (glfwLibName != null) {
             System.setProperty("org.lwjgl.glfw.libname", glfwLibName);
         }
+
+        if ("true".equals(legacyHome)) {
+            System.setProperty("user.home", workDirAbsolute.toString());
+            Path minecraftDir = Paths.get(".minecraft");
+            System.out.println(minecraftDir.toAbsolutePath());
+            Files.deleteIfExists(minecraftDir);
+            Files.createSymbolicLink(minecraftDir, workDir);
+        }
+        argsList.add("--gameDir");
+        argsList.add(workDirAbsolute.toString());
 
         argsList.add("--accessToken");
         argsList.add(accessToken);
@@ -90,42 +169,49 @@ public class DevLaunchWrapper {
         }
 
         if (assetsPath != null) {
-            var realAssetsPath = runfiles.rlocation(Path.of(assetsPath).normalize().toString());
-            var path = Path.of(realAssetsPath).toRealPath();
-            argsList.add("--assetsDir");
-            argsList.add(path.toString());
-            if (version != null) {
-                var versionPath = path.resolve(Path.of("versions", version));
-                argsList.add("--assetIndex");
-                argsList.add(Files.readString(versionPath));
+            String realAssetsPath = runfiles.rlocation(Paths.get(assetsPath).normalize().toString());
+            Path realAssets = Paths.get(realAssetsPath);
+            if ("true".equals(legacyAssets)) {
+                Path resourcesDir = Paths.get("resources");
+                Files.deleteIfExists(resourcesDir);
+                Files.createSymbolicLink(resourcesDir, realAssets.resolve("legacy"));
+            } else {
+                Path path = realAssets.toRealPath();
+                argsList.add("--assetsDir");
+                argsList.add(path.toString());
+                if (version != null) {
+                    Path versionPath = path.resolve(Paths.get("versions", version));
+                    argsList.add("--assetIndex");
+                    argsList.add(readString(versionPath));
+                }
             }
         }
 
         switch (type) {
-            case "client" -> {
-                var allowSymlinksPath = Path.of("allowed_symlinks.txt");
-                Files.writeString(allowSymlinksPath, "[regex].*\n");
-            }
-            case "server" -> {
-                var serverPropertiesPath = Path.of("server.properties");
+            case "client":
+                Path allowSymlinksPath = Paths.get("allowed_symlinks.txt");
+                writeString(allowSymlinksPath, "[regex].*\n");
+                break;
+            case "server":
+                Path serverPropertiesPath = Paths.get("server.properties");
                 if (!Files.exists(serverPropertiesPath)) {
-                    Files.writeString(serverPropertiesPath, "online-mode=false\n");
+                    writeString(serverPropertiesPath, "online-mode=false\n");
                 }
                 argsList.add("--nogui");
-                var eulaPath = Path.of("eula.txt");
-                Files.writeString(eulaPath, "eula=true\n");
-            }
+                Path eulaPath = Paths.get("eula.txt");
+                writeString(eulaPath, "eula=true\n");
+                break;
         }
 
         System.err.println("Launching game with arguments: " + String.join(" ", argsList));
-        var array = new String[argsList.size()];
+        String[] array = new String[argsList.size()];
         array = argsList.toArray(array);
 
         if (mainClass == null) {
             throw new IllegalArgumentException("No main class specified. Specify your real main class with dev.launch.mainClass JVM property.");
         }
-        var clazz = ClassLoader.getSystemClassLoader().loadClass(mainClass);
-        var mainMethod = clazz.getMethod("main", String[].class);
+        Class<?> clazz = ClassLoader.getSystemClassLoader().loadClass(mainClass);
+        Method mainMethod = clazz.getMethod("main", String[].class);
         mainMethod.invoke(null, (Object) array);
     }
 }
